# PyStormTracker

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  AGENTS.md  ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  GEMINI.md  HODGES.md  LICENSE  README.md  ROADMAP.md  codecov.yml  gen_filtered_ref.ncl  hodges_vo_hodges.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  python-publish.yml
benchmark/: BENCHMARK.md  benchmark_detailed_v0.3.3.json  benchmark_detailed_v0.4.0.dev.json  calculate_spectral_errors.py  calculate_vodv_errors.py  generate_stacked_charts.py  run_benchmark_detailed.py  run_benchmark_vodv.py
data/test/: slp.2012.nc
data/test/era5/: era5_msl_2025120100_0.25x0.25.nc  era5_msl_2025120100_0.25x0.25_t0-42_ncl.nc  era5_msl_2025120100_0.25x0.25_t5-42_ncl.nc  era5_msl_2025120100_2.5x2.5.nc  era5_msl_2025120100_2.5x2.5_t0-42_ncl.nc  era5_msl_2025120100_2.5x2.5_t5-42_ncl.nc  era5_sfvp850_2025120100_2.5x2.5_ncl.nc  era5_uv850_2025120100_2.5x2.5.nc  era5_vo850_2025120100_2.5x2.5.nc  era5_vodv850_2025120100_2.5x2.5_ncl.nc  process_era5.ncl  process_era5_0.25.ncl
data/test/tracks/: era5_msl_2025-2026_djf_2.5x2.5_hodges_imilast.txt  era5_msl_2025-2026_djf_2.5x2.5_v0.0.2_imilast.txt  era5_vo_2.5x2.5_1e-4_v0.0.2_imilast.txt
docs/: ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  HODGES.md  ROADMAP.md  architecture.md  benchmark.md  changelog.md  conf.py  generate_track_json.py  healpix.md  healpix_implementation_summary.md  healpix_phase2_plan.md  healpix_tracker_plan.md  hodges.md  index.md  interactive.md  readme.md  roadmap.md  spectral_accuracy.md
docs/_static/: explorer.html  explorer.tracks.js  interactive_map.html  tracks_data.js
docs/paper/: paper.bib  paper.md
notebooks/: detect_center_latlon.ipynb  get_var_handle.ipynb  interactive_tracks.ipynb  plot_tracks.ipynb  tracker.ipynb
paper/: paper.bib  paper.md
pystormtracker/: detector.py  linker.py  stormtracker.py  tracker.py  tracker_cesm.py
pytrack/: detector.py  tracker.py
scripts/: run_cesm.sh  run_cesm_yellowstone.sh  run_erai_msl.sh  run_erai_vo.sh  run_ncep.sh
src/pystormtracker/: __init__.py  cli.py  convert.py  data.py  detector.py  linker.py  stormtracker.py
src/pystormtracker/healpix/: __init__.py  detector.py  kernels.py  tracker.py
src/pystormtracker/hodges/: constants.py  detector.py  kernels.py  linker.py  tracker.py
src/pystormtracker/io/: __init__.py  data_loader.py  hodges.py  imilast.py  json.py  loader.py
src/pystormtracker/models/: __init__.py  center.py  constants.py  geo.py  grid.py  time.py  tracker.py  tracks.py
src/pystormtracker/preprocessing/: __init__.py  derivatives.py  jax_sht.py  kinematics.py  regrid.py  sh_filter.py  spectral.py  taper.py
src/pystormtracker/simple/: __init__.py  concurrent.py  detector.py  kernels.py  linker.py  tracker.py
src/pystormtracker/templates/: explorer.html
src/pystormtracker/utils/: benchmark.py  data.py  data_utils.py  geo.py
tests/: __init__.py  conftest.py  test_center.py  test_cli.py  test_cli_dat_files.py  test_consistency.py  test_data.py  test_data_utils.py  test_derivatives.py  test_detector_healpix.py  test_detector_hodges.py  test_integration.py  test_integration_healpix.py  test_integration_hodges.py  test_integration_sh_filter.py  test_integration_simple.py  test_integration_spectral.py  test_integration_vorticity.py  test_io_data_loader.py  test_io_imilast.py  test_io_loader.py  test_jax_backend.py  test_kernels_healpix.py  test_kernels_hodges.py  test_kinematics.py  test_linker_hodges.py  test_preprocessing.py  test_preprocessing_regrid.py  test_sh_filter.py  test_simple_detector.py  test_simple_kernels.py  test_simple_linker.py  test_simple_tracker.py  test_spectral.py  test_stormtracker.py  test_tracker_hodges.py  test_tracks.py  testing_utils.py  utils.py
tests/data/era5/: era5_msl_2025120100_0.25x0.25_t5-42_ncl.nc  era5_msl_2025120100_2.5x2.5.nc  era5_uv850_2025120100_2.5x2.5.nc  era5_vo850_2025120100_0.25x0.25.nc  era5_vodv850_2025120100_2.5x2.5_ncl.nc
tests/data/tracks/: era5_msl_2025-2026_djf_2.5x2.5_hodges.txt  era5_vo_2025-2026_djf_2.5x2.5_1e-4_v0.0.2_imilast.txt
tests/integration/: test_healpix.py  test_hodges.py  test_simple.py  test_spectral.py  test_vorticity.py
tests/unit/: test_cli.py  test_cli_dat_files.py  test_testing_utils.py  test_utils.py
tests/unit/healpix/: test_detector.py  test_tracker.py
tests/unit/hodges/: test_detector.py  test_kernels.py  test_linker.py  test_tracker.py
tests/unit/io/: test_data_loader.py
tests/unit/models/: test_center.py  test_geo.py
tests/unit/preprocessing/: test_jax_backend.py  test_kinematics.py  test_regrid.py  test_spectral.py
tests/unit/simple/: test_detector.py
