[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyStormTracker"
version = "0.3.0"
description = "A Parallel Object-Oriented Cyclone Tracker in Python"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
authors = [
    { name = "Albert M. W. Yau", email = "albert@mwyau.com" }
]
maintainers = [
    { name = "Albert M. W. Yau", email = "albert@mwyau.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "xarray>=2024.2.0",
    "dask>=2024.2.0",
    "distributed>=2024.2.0",
    "pooch>=1.8.0",
    "h5netcdf[h5py]>=1.3.0",
]

[project.scripts]
stormtracker = "pystormtracker.stormtracker:main"

[project.urls]
Homepage = "https://github.com/mwyau/PyStormTracker"
Repository = "https://github.com/mwyau/PyStormTracker.git"
Issues = "https://github.com/mwyau/PyStormTracker/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "mpi4py>=3.1.5",
    "pandas>=2.2.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pystormtracker"]

[tool.hatch.build]
exclude = [
    "data/**/*.nc",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "mpi4py>=3.1.5",
    "pandas>=2.2.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "C4", "B", "UP", "PT", "SIM", "RUF", "ANN",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["distributed.*", "dask.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=pystormtracker --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["pystormtracker"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.paths]
source = [
    "src/pystormtracker",
    "**/site-packages/pystormtracker",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "if __name__ == .__main__.:",
]
