[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyStormTracker"
version = "0.3.1"
description = "A Parallel Object-Oriented Cyclone Tracker in Python"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
authors = [
    { name = "Albert M. W. Yau", email = "albert@mwyau.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "xarray>=2024.9.0",
    "h5netcdf>=1.0.0",
    "h5py>=3.0.0",
    "dask>=2024.0.0",
    "distributed>=2024.0.0",
]

[project.scripts]
stormtracker = "pystormtracker.stormtracker:main"

[project.urls]
Homepage = "https://pystormtracker.readthedocs.io/"
Repository = "https://github.com/mwyau/PyStormTracker.git"
Issues = "https://github.com/mwyau/PyStormTracker/issues"

[project.optional-dependencies]
mpi = [
    "mpi4py>=4.0.0",
]
grib = [
    "cfgrib>=0.9.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pystormtracker"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "pooch>=1.8.0",
    "pystormtracker[mpi,grib]",
]


[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "C4", "B", "UP", "PT", "SIM", "RUF", "ANN",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["distributed.*", "dask.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=pystormtracker --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests as integration (skipped by default, run with --run-integration)",
]

[tool.coverage.run]
source = ["pystormtracker"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.paths]
source = [
    "src/pystormtracker",
    "**/site-packages/pystormtracker",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "if __name__ == .__main__.:",
]
