[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyStormTracker"
version = "0.5.0.dev"
description = "A High-Performance Cyclone Tracker in Python"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
authors = [
    { name = "Albert M. W. Yau", email = "albert@mwyau.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "dask>=2024.1.0",
    "h5netcdf>=1.0.0",
    "h5py>=3.8.0",
    "numpy>=1.24.0",
    "numba>=0.60.0",
    "xarray>=2024.9.0",
]

[project.scripts]
stormtracker = "pystormtracker.cli:main"

[project.urls]
Homepage = "https://pypi.org/project/PyStormTracker/"
Repository = "https://github.com/mwyau/PyStormTracker.git"
Issues = "https://github.com/mwyau/PyStormTracker/issues"

[project.optional-dependencies]
mpi = [
    "mpi4py>=4.1.0",
]
grib = [
    "cfgrib>=0.9.15.1",
    "eccodes>=2.43.0",
    "eccodeslib>=2.43.0 ; sys_platform != 'win32'",
]
netcdf4 = [
    "netCDF4>=1.6.1",
]
pre = [
    "shtns>=3.7.3",
]
hodges = [
    "shtns>=3.7.3",
]
all = [
    "cfgrib>=0.9.15.1",
    "eccodes>=2.43.0",
    "eccodeslib>=2.43.0 ; sys_platform != 'win32'",
    "mpi4py>=4.1.0",
    "netCDF4>=1.6.1",
    "shtns>=3.7.3",
]
docs = [
    "myst-parser>=5.0.0",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]
viz = [
    "matplotlib>=3.10.8",
    "cartopy>=0.25.0",
    "jupyterlab>=4.5.6",
    "ipywidgets>=8.1.8",
    "ipympl>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pystormtracker"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/benchmark",
]

[dependency-groups]
dev = [
    "PyStormTracker[all]",
    "mypy>=1.19.1",
    "pooch>=1.9.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "pandas>=3.0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["worktrees", ".venv", "notebooks"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "C4", "B", "UP", "PT", "SIM", "RUF", "ANN",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = false
exclude = ["worktrees", ".venv", "notebooks"]

[[tool.mypy.overrides]]
module = ["dask.*", "numba.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --durations=0"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]

[tool.coverage.run]
source = ["pystormtracker"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.paths]
source = [
    "src/pystormtracker",
    "**/site-packages/pystormtracker",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "if __name__ == .__main__.:",
]

[tool.uv]
link-mode = "copy"
no-binary-package = ["shtns"]
